# sampling

./: LICENSE  README.md  pyproject.toml
notebooks/: meta copy.ipynb  meta.ipynb  meta_masked.ipynb  meta_masked_adaptive.ipynb  nets.pt  set_decoder.pt  set_encoder.pt  vanilla.ipynb
scripts/: new.py  new2.py  test.py
src/sampling/: __init__.py
src/sampling/masked/: loader.py  models.py  models_adaptive.py  sampler.py  train.py  vis.py
src/sampling/meta/: models.py  sampler.py  train.py  train_vis.py  vis.py
src/sampling/vanilla/: models.py  sampler.py  train.py  vis.py
