[project]
name = "sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Burzer", email = "maxi.burzer@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "metalearning-benchmarks",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
metalearning-benchmarks = { git = "https://github.com/michaelvolpp/metalearning_benchmarks.git" }
